# SecureClipPlusPlus

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
